<resources>

    <string name="app_name">ToddlerColors</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_toddler_main">ToddlerColors</string>
    <string name="main_title">Welcome to Toddler Colors!</string>
    <string name="color_game1">Fruits and Colors</string>
    <string name="color_game2">Vegetables and Colors</string>
    <string name="color_game3">Match Colors</string>
    <string name="about">About Toddler Colors</string>
    <string name="about_text">    Toddler Colors is all about colors where toddlers can learn and associate
     colors with day-to-day objects that they see around them like fruits and vegetables.
     This will also help them learn to recognize those common objects 
     and find similarity between those objects based on color . 
     Example: 
     Apple is a fruit.
     Tomato is a vegetable.
     Both are red in color.
    </string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play Background music</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="question1">What color is the apple?</string> 
    <string name="question2">What color is the banana?</string>
    <string name="question3">What color are the grapes?</string>
    <string name="question4">What color is the kiwi?</string>
    <string name="question5">What color is the orange?</string>
    <string name="question11">What color is the tomato?</string> 
    <string name="question12">What color is the lemon?</string>
    <string name="question13">What color are the eggplant?</string>
    <string name="question14">What color is the broccoli?</string>
    <string name="question15">What color is the carrot?</string>
    <string name="qans1">RED</string>
    <string name="qans2">PURPLE</string>
    <string name="qans3">GREEN</string>
    <string name="qans4">YELLOW</string>
    <string name="qans5">ORANGE</string>    

</resources>